# LegacyBasic

./: .gitattributes  CMakeLists.txt  CuTest.c  LICENSE  LegacyBasic.sln  LegacyBasic.vcxproj  LegacyBasic.vcxproj.filters  Makefile  README.md  bcode.c  bcode.h  builtin.c  config.h.in  def.c  def.h  emit.c  emit.h  env.c  env.h  interactive.c  interactive.h  interrupt.c  keyword.c  lbasic.c  lexer.c  lexer.h  os.c  os.h  paren.c  paren.h  parse.c  parse.h  run.c  run.h  source.c  source.h  stringlist.c  stringlist.h  stringuniq.c  test.py  (+4 more)
Basic/: CMakeLists.txt  arrays.c  arrays.h  bcode.c  bcode.h  builtin.c  builtin.h  def.c  def.h  emit.c  emit.h  env.c  env.h  init.c  init.h  lexer.c  lexer.h  linemap.c  linemap.h  paren.c  paren.h  parse.c  parse.h  run.c  run.h  source.c  source.h  symbol.c  symbol.h  token.c  token.h
EXAMPLES/: advent1.bas  sieve.bas
Monitor/: CMakeLists.txt  interactive.c  interactive.h
Shared/: CMakeLists.txt  CuTest.h  hash.c  hash.h  interrupt.c  interrupt.h  os.c  os.h  stringlist.c  stringlist.h  stringuniq.c  utils.c  utils.h
System/: CMakeLists.txt  lbasic.c  options.c  options.h
doc/: LegacyBasic.rst
src/: CMakeLists.txt  arrays.c  arrays.h  bcode.c  builtin.c  builtin.h  def.h  interrupt.h  keyword.h  lbasic.c  lexer.c  lexer.h  os.c  os.h  paren.c  parse.h  run.h  source.c  source.h  stringlist.c  stringlist.h  stringuniq.h  utils.c  utils.h
tests/: crunch.bas  crunch.out  data.bas  data.out  def.bas  def.out  def1.bas  def1.out  def2.bas  def2.err  dim.bas  dim.out  dim1.bas  dim1.err  dummy.bas  else.bas  else.out  empty.bas  empty.out  end.bas  for.bas  for.out  for1.bas  for1.err  for2.bas  for2.err  gosub.bas  gosub.out  goto.bas  if.bas  if.out  linput.bas  linput.err  ongosub.bas  ongosub.out  ongoto.bas  paren.bas  paren.out  paren1.bas  paren1.err  (+9 more)
